[package]
name = "efd"
description = "2D/3D Elliptical Fourier Descriptor (EFD) implementation in Rust."
version = "4.2.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KmolYuan/efd-rs"
keywords = ["efd", "elliptical", "fourier-descriptor", "algorithm"]
categories = ["algorithm", "no-std"]

[features]
default = ["std"]
std = ["nalgebra/std"]
curve_diff = ["interp"]

[dependencies]
num-traits = "0.2"
interp = { version = "1", optional = true }

[dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["libm", "macros", "alloc"]

[dev-dependencies]
plotters = "0.3"
approx = "0.5"
