[package]
name = "efd"
description = "2D/3D Elliptical Fourier Descriptor (EFD) implementation in Rust."
version = "5.0.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KmolYuan/efd-rs"
keywords = ["efd", "elliptical", "fourier-descriptor", "algorithm"]
categories = ["algorithm", "no-std"]

[features]
default = ["std"]
std = ["nalgebra/std"]

[dependencies]
num-traits = "0.2"

[dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["libm", "macros", "alloc"]

[dev-dependencies]
plotters = "0.3"
approx = "0.5"
