[package]
name = "efd"
description = "2D/3D Elliptical Fourier Descriptor (EFD) implementation in Rust."
version = "6.0.1"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KmolYuan/efd-rs"
keywords = ["efd", "elliptical", "fourier-descriptor", "algorithm"]
categories = ["algorithm", "no-std"]

[features]
default = ["std"]
std = ["nalgebra/std", "num-traits/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["libm", "macros", "alloc"]

[dev-dependencies]
plotters = "0.3"
approx = "0.5"

[lints.rust]
missing-docs = "warn"
unsafe-code = "forbid"

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"
